refactor: apis to follow REST API naming conventions
Change from camelCase to using hyphens

Affected APIs:
* GET_USERS_FROM_CASE: /cases/{caseId}/user-memberships (not userMemberships)
* INVITE_USER_TO_CASE: /cases/{caseId}/user-memberships (not userMemberships)
* GET_AVAILABLE_ENDPOINTS: /available-endpoints (not /availableEndpoints)
* CREATE_CASE_ASSOCIATION: /datavaults/{dataVaultId}/case-associations (not caseAssociations)
* DELETE_CASE_ASSOCIATION: /datavaults/{dataVaultId}/files/{fileId}/case-associations (not caseAssociations)
* GET_SCOPED_CASE_INFO: /cases/{caseId}/scoped-information (not scopedInformation)
* REFRESH_AUTH_TOKEN: /auth/refresh-token (note refreshToken)
* REVOKE_AUTH_TOKEN: /auth/revoke-token (note revokeToken)
* GET_LOGIN_URL: /auth/login-url (not loginUrl)
* GET_LOGOUT_URL: /auth/logout-url (not logoutUrl)

cr: https://code.amazon.com/reviews/CR-118708116
