# source/dea-backend/src/oas/openapi-datavaults.yml
@@ -128,7 +128,7 @@ paths:
                       $ref: '#/components/schemas/DataVaultFiles'
                   next:
                     type: string
-  /datavaults/{dataVaultId}/caseAssociations:
+  /datavaults/{dataVaultId}/case-associations:
     post:
       summary: Associate data vault file to case
       description: Creates a case file entry to associate data vault file to case
@@ -166,7 +166,7 @@ paths:
                     type: array
                     items:
                       $ref: '#/components/schemas/DataVaultFiles'
-  /datavaults/{dataVaultId}/files/{fileId}/caseAssociations:
+  /datavaults/{dataVaultId}/files/{fileId}/case-associations:
     delete:
       summary: Deletes case association
       tags:
